# interferences

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py
binder/: environment.yml
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: API.rst  plot.rst  table.rst  util.rst
docs/source/dev/: changelog.rst  contributing.rst  contributors.rst  development.rst
docs/source/gallery/examples/: README.rst  spectraplot.py  stemplot.py  table.py
docs/source/gallery/tutorials/: README.rst
interferences/: __init__.py  _version.py  core.py  optimize.py
interferences/constraints/: __init__.py  composition.py
interferences/plot/: __init__.py  kernel.py  pt.py  ptable.py  spectra.py
interferences/table/: __init__.py  build.py  combinations.py  intensity.py  molecules.py  store.py
interferences/util/: __init__.py  meta.py  mz.py  pt.py  ptable.py  sorting.py
test/: dataframe_accessor.py  optimize.py  test_core.py
test/plot/: plot_spectra.py
test/table/: table.py  table_build.py  table_combinations.py  table_intensity.py  table_molecules.py  table_store.py
test/util/: util_mz.py
