[aliases]
test=pytest

[tool:pytest]
addopts = --cov-report term-missing --cov-report html --cov-config .coveragerc --cov=interferences

[versioneer]
VCS = git
style = pep440
versionfile_source = interferences/_version.py
versionfile_build = interferences/_version.py
tag_prefix =
parentdir_prefix = interferences-

[metadata]
description-file = README.md
