[aliases]
test=pytest

[tool:pytest]
addopts = test --cov=interferences --cov-report html --cov-report xml --cov-report term-missing --cov-config .coveragerc
python_files = *.py

[versioneer]
VCS = git
style = pep440
versionfile_source = interferences/_version.py
versionfile_build = interferences/_version.py
tag_prefix =
parentdir_prefix = interferences-

[metadata]
description-file = README.md
